<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="SafetyParameters" Id="{2552f5df-85e1-4bf6-bf78-b379cb03ec60}">
    <Declaration><![CDATA[TYPE SafetyParameters :
STRUCT
	minAirPressure          : REAL := 30;
	maxAirPressureDelay     : TIME := T#2S;
	minFacilityPressure     : REAL := 150;
	minMethanePressure      : REAL := 20;
	maxMethanePressureDelay : TIME := T#1S;
	minCombustorPressure    : REAL;
	minIgnitionDelay        : TIME := T#1S;
	
	bOverrideMethaneCheck      : BOOL := FALSE;
	bOverrideFacilityAirCheck  : BOOL := FALSE;
	bOverrideIngitionCheck     : BOOL := FALSE;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>